--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -46,11 +46,14 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\GalaxyRotation.cs" />
      <Compile Include="Assets\Scripts\ParticleRotate.cs" />
      <Compile Include="Assets\Scripts\RotCam.cs" />
      <Compile Include="Assets\Scripts\StarController.cs" />
      <Compile Include="Assets\Scripts\StarScript.cs" />
+     <None Include="Assets\Shaders\AlphaSelfIllum2.shader" />
      <None Include="Assets\Standard Assets\Particles\Sources\Shaders\Particle Alpha Blend (Queue +100).shader" />
+     <None Include="Assets\Shaders\AlphaSelfIllum.shader" />
  <Reference Include="Assembly-UnityScript-firstpass">
  <HintPath>Library\ScriptAssemblies\Assembly-UnityScript-firstpass.dll</HintPath>
  </Reference>
